feat: Change thread type from platform threads to virtual threads in a2aTaskExecutor
* refactor: a2aTaskExecutor를 virtual threads 기반으로 교체

- ThreadPoolExecutor(a2aInternalExecutor) → Executors.newThreadPerTaskExecutor(a2aTaskExecutor)
- 스레드 이름 prefix: a2a-agent-executor- → a2a-task-
- LLM/에이전트 호출 등 I/O-bound 작업에 virtual threads가 적합하여
  고정 풀 크기 설정(corePoolSize, maxPoolSize, keepAliveSeconds) 불필요
- virtual threads는 항상 daemon이므로 graceful shutdown은
  Spring Boot lifecycle hooks에 위임
- A2AVirtualThreadIntegrationTest: 실제 A2A message/send 요청을 통해
  AgentExecutor가 a2aTaskExecutor의 virtual thread 위에서 실행됨을 검증

Signed-off-by: CokeLee777 <akak640@kyonggi.ac.kr>