@@ -31,10 +31,8 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.core.env.Environment;
 
 import java.util.concurrent.Executor;
-import java.util.concurrent.LinkedBlockingQueue;
-import java.util.concurrent.ThreadPoolExecutor;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ThreadFactory;
 
 /**
  * Spring Boot auto-configuration for A2A Server.
@@ -146,6 +144,16 @@ public class A2AServerAutoConfiguration {
 
 	/**
 	 * Provide default values for A2A SDK configuration keys.
+	 *
+	 * <p>
+	 * The SDK's defaults include both blocking timeouts ({@code a2a.blocking.*}) and
+	 * thread-pool settings ({@code a2a.executor.*}). When this auto-configuration
+	 * provides {@link #a2aTaskExecutor()}, the executor-related keys
+	 * ({@code a2a.executor.core-pool-size}, {@code max-pool-size}, etc.) are <strong>not
+	 * used</strong>—they apply only when the SDK creates its own executor (e.g.
+	 * AsyncExecutorProducer). Blocking timeouts and any other keys are still read by the
+	 * SDK via {@link #configProvider}. This bean must remain so that the SDK can resolve
+	 * all config keys.
 	 */
 	@Bean
 	@ConditionalOnMissingBean
@@ -158,6 +166,12 @@ public class A2AServerAutoConfiguration {
 	 * Configuration provider for A2A settings. If a property is not found in the Spring
 	 * Environment, it falls back to default values provided by
 	 * DefaultValuesConfigProvider.
+	 *
+	 * <p>
+	 * When {@link #a2aTaskExecutor()} is supplied, {@code a2a.executor.*} values from
+	 * this provider are unused for execution; they are still present so that the SDK can
+	 * resolve them if it reads config. Other keys (e.g. {@code a2a.blocking.*}) are used
+	 * by the SDK.
 	 */
 	@Bean
 	@ConditionalOnMissingBean
@@ -168,29 +182,23 @@ public class A2AServerAutoConfiguration {
 	}
 
 	/**
-	 * Provide internal executor for async agent operations.
+	 * Provide executor for async agent operations using virtual threads.
+	 *
+	 * <p>
+	 * Virtual threads are well-suited for A2A agent tasks, which are I/O-bound (LLM
+	 * calls, downstream agent calls). Each task gets its own virtual thread without the
+	 * overhead of a fixed thread pool.
+	 *
+	 * <p>
+	 * Note: Virtual threads are always daemon threads by JVM design. Graceful shutdown of
+	 * in-flight tasks is managed by Spring Boot's lifecycle hooks instead.
 	 */
 	@Bean
-	@ConditionalOnMissingBean(name = "a2aInternalExecutor")
-	public Executor a2aInternalExecutor(SpringA2AConfigProvider configProvider) {
-		logAutoConfig("A2A internal executor", "async agent operations");
-		int corePoolSize = Integer.parseInt(configProvider.getValue("a2a.executor.core-pool-size"));
-		int maxPoolSize = Integer.parseInt(configProvider.getValue("a2a.executor.max-pool-size"));
-		long keepAliveSeconds = Long.parseLong(configProvider.getValue("a2a.executor.keep-alive-seconds"));
-
-		log.debug("A2A internal executor: corePoolSize={}, maxPoolSize={}, keepAliveSeconds={}", corePoolSize,
-				maxPoolSize, keepAliveSeconds);
-
-		AtomicInteger threadCounter = new AtomicInteger(1);
-		// Non-daemon threads as per A2A spec
-
-		return new ThreadPoolExecutor(corePoolSize, maxPoolSize, keepAliveSeconds, TimeUnit.SECONDS,
-				new LinkedBlockingQueue<>(), runnable -> {
-					Thread thread = new Thread(runnable);
-					thread.setName("a2a-agent-executor-" + threadCounter.getAndIncrement());
-					thread.setDaemon(false); // Non-daemon threads as per A2A spec
-					return thread;
-				});
+	@ConditionalOnMissingBean(name = "a2aTaskExecutor")
+	public Executor a2aTaskExecutor() {
+		logAutoConfig("A2A task executor", "async agent operations (virtual threads)");
+		ThreadFactory factory = Thread.ofVirtual().name("a2a-task-", 1).factory();
+		return Executors.newThreadPerTaskExecutor(factory);
 	}
 
 	/**
@@ -204,7 +212,7 @@ public class A2AServerAutoConfiguration {
 	@ConditionalOnMissingBean
 	public RequestHandler requestHandler(AgentExecutor agentExecutor, TaskStore taskStore, QueueManager queueManager,
 			PushNotificationConfigStore pushConfigStore, PushNotificationSender pushSender,
-			@Qualifier("a2aInternalExecutor") Executor executor) {
+			@Qualifier("a2aTaskExecutor") Executor executor) {
 		logAutoConfig("DefaultRequestHandler", "A2A request handling");
 		return DefaultRequestHandler.create(agentExecutor, taskStore, queueManager, pushConfigStore, pushSender,
 				executor);
